--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "ngx-pagination": "^6.0.1",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
