--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "ngx-pagination": "^6.0.1",
     "ngx-toastr": "^14.3.0",
     "popper.js": "^1.16.1",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
